# GraphQLTest

./: .gitignore  README.md  docker-compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: Dockerfile  cache.py  database.py  main.py  pyproject.toml  schema.py
backend/adapters/: author_adapter.py  book_adapter.py
backend/src/backend/: main.py
backend/src/backend/core/: cache.py  config.py  database.py
backend/src/backend/graphql/: context.py  schema.py
backend/src/backend/graphql/resolvers/: __init__.py
backend/src/backend/graphql/types/: __init__.py
backend/src/backend/models/: __init__.py
backend/src/backend/models/schemas/: __init__.py
backend/src/backend/models/sql/: __init__.py
backend/src/backend/realtime/: __init__.py  redis_pubsub_mux.py
backend/src/backend/services/: author_adapter.py  book_adapter.py
backend/src/backend/services/circuit_breakers/: registry.py  storage.py
backend/src/backend/websocket/: __init__.py  router.py
database/: init.sql
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  queries.ts
load-testing/: load-test-ws.js  load-test.js
publisher/: Dockerfile  publisher.py
